--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -46,6 +46,16 @@ p {
   font-size: 1.75rem;
 }
 
+@media screen and (min-width: 1024px) {
+  p {
+    font-size: 1.84rem;
+  }
+
+  h1 {
+    font-size: 4.46rem;
+  }
+}
+
 a {
   text-decoration: none;
   color: var(--Dark-Grayish-Blue);
@@ -79,6 +89,7 @@ ul {
   font-size: 1.6rem;
   font-family: "Bai Jamjuree", sans-serif;
   border-radius: 3rem;
+  cursor: pointer;
 }
 
 .btn:first-of-type {
@@ -106,8 +117,12 @@ ul {
   position: relative;
 }
 
+.ios:hover {
+  background: #5dccbb;
+}
+
 .ios::after {
-  background-color: hsl(170, 65.6%, 37.6%);
+  background: hsl(170, 65.6%, 37.6%);
 }
 
 .mac {
@@ -117,8 +132,25 @@ ul {
   position: relative;
 }
 
+.mac:hover {
+  background: #8897ff;
+}
+
 .mac::after {
   background-color: hsl(232, 65.3%, 58.2%);
+}
+
+@media screen and (min-width: 1024px) {
+  .btn {
+    width: initial;
+    padding: 1.6rem 3.73rem;
+    font-size: 1.75rem;
+    font-weight: 600;
+  }
+
+  .btn:first-of-type {
+    margin-bottom: 0;
+  }
 }
 
 /* --- List Component --- */
@@ -138,6 +170,18 @@ ul {
   width: 90%;
   padding-top: 5rem;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 1024px) {
+  .container {
+    width: 53%;
+    padding-top: 8rem;
+  }
+
+  .list__title {
+    font-size: 2.3rem;
+    margin-bottom: 1rem;
+  }
 }
 
 /* --- Header Section --- */
@@ -176,6 +220,33 @@ ul {
   margin-top: 5rem;
 }
 
+@media screen and (min-width: 1024px) {
+  .header::before {
+    background-image: url("../images/bg-header-desktop.png");
+    background-size: contain;
+  }
+
+  .logo {
+    width: 12.5rem;
+    height: 12.5rem;
+  }
+
+  .header__title {
+    margin-bottom: 1.25rem;
+  }
+
+  .header__text {
+    font-size: 2.05rem;
+  }
+
+  .header__button {
+    display: flex;
+    justify-content: center;
+    gap: 1.8rem;
+    margin-top: 4.75rem;
+  }
+}
+
 /* --- Main Feature Track --- */
 .feature__item {
   padding-top: 15rem;
@@ -189,6 +260,14 @@ ul {
 
 .feature__image {
   padding: 8rem 0;
+}
+
+.track .feature__image,
+.track .list,
+.clipboard,
+.workflow {
+  width: 90%;
+  margin: 0 auto;
 }
 
 .clipboard,
@@ -215,6 +294,143 @@ ul {
 
 .workflow {
   padding-bottom: 0;
+}
+
+@media screen and (min-width: 1024px) {
+  .container .features {
+    width: 100%;
+  }
+
+  .feature__item {
+    padding-top: 7rem;
+  }
+
+  .feature__title {
+    font-size: 3.45rem;
+    margin-bottom: 1.7rem;
+  }
+
+  .feature__text {
+    line-height: 1.55;
+  }
+
+  /* --- track section --- */
+
+  .track {
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-areas:
+      "title title"
+      "image list";
+  }
+
+  .track .feature__content {
+    grid-area: title;
+  }
+
+  .track .feature__image {
+    grid-area: image;
+    order: 1;
+    width: 112%;
+    position: relative;
+    right: 8.3rem;
+  }
+
+  .track .list {
+    grid-area: list;
+    align-self: center;
+    max-width: 50%;
+    margin-left: 10.9rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5rem;
+    align-items: center;
+    height: 100%;
+  }
+
+  .track .list__item:first-of-type {
+    margin-top: -6rem;
+  }
+
+  .track .list__item {
+    padding: 0;
+    margin: 0;
+  }
+
+  .track .list__text {
+    font-size: 1.6rem;
+    /* line-height: 2; */
+  }
+
+  .track .list {
+    text-align: left;
+  }
+
+  /* --- clipboard section --- */
+
+  .clipboard {
+    padding-top: 1.6rem;
+  }
+
+  .clipboard .feature__content {
+    max-width: 53%;
+    margin: 0 auto;
+    margin-bottom: 2rem;
+  }
+
+  .clipboard .feature__image {
+    width: 67.5%;
+    margin: 0 auto;
+  }
+
+  /* --- workflow section --- */
+
+  .workflow {
+    padding-top: 6.5rem;
+  }
+
+  .workflow .list {
+    display: flex;
+    width: 90%;
+    gap: 2rem;
+    justify-content: center;
+    padding-top: 4rem;
+    margin: 0 auto;
+  }
+
+  .workflow .list__item {
+    max-width: 30%;
+    max-height: 30rem;
+  }
+
+  .workflow .list__item {
+    max-width: 29.5%;
+  }
+
+  .workflow .list__item + .list__item {
+    margin: 0;
+  }
+
+  .workflow .item__title {
+    font-size: 2.3rem;
+  }
+
+  .workflow .item__text {
+    font-size: 1.6rem;
+    line-height: 1.8;
+  }
+
+  .workflow .item__image {
+    padding: 0;
+  }
+
+  .workflow .list__image {
+    max-height: 9.5rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
 }
 
 /* --- Footer --- */
@@ -284,4 +500,117 @@ ul {
 
 .social__media .fa-brands {
   font-size: 2rem;
+}
+
+.list__link:hover {
+  color: var(--Strong-Cyan);
+}
+
+@media screen and (min-width: 1024px) {
+  .footer__brand {
+    padding-top: 21rem;
+    padding-bottom: 15.5rem;
+  }
+
+  .brand__list {
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    gap: 9.65rem;
+  }
+
+  .brand__list .list__item {
+    padding: 0;
+    max-width: 18rem;
+  }
+
+  .brand__list .list__item img {
+    padding: 0;
+    max-width: 100%;
+    width: 100%;
+  }
+
+  .brand__list .list__item + .list__item {
+    margin-top: 0;
+  }
+
+  /* --- footer download --- */
+
+  .footer__download .item__title {
+    font-size: 3.5rem;
+    margin-bottom: 1.6rem;
+  }
+
+  .footer__download .item__text {
+    line-height: 1.6;
+  }
+
+  .footer__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .footer__button .btn {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .footer__download {
+    padding-bottom: 14.5rem;
+  }
+
+  /* --- footer nav --- */
+
+  .footer__logo {
+    margin-right: 13.5rem;
+  }
+
+  .footer__logo img {
+    width: 5.5rem;
+    height: 5.5rem;
+  }
+
+  .footer__nav .navigation {
+    margin: 0;
+    margin-right: auto;
+  }
+
+  .footer__container {
+    width: 82.5%;
+    margin: 0 auto;
+  }
+
+  .footer__container {
+    display: flex;
+  }
+
+  .navigation {
+    display: flex;
+    flex-basis: 53%;
+    flex-direction: column;
+    align-items: start;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    height: 8rem;
+  }
+
+  .navigation .list__link {
+    font-size: 1.8rem;
+  }
+
+  .navigation .list__item + .list__item {
+    margin-top: 0;
+  }
+
+  .footer__nav .social__media {
+    gap: 2.6rem;
+  }
+
+  .social__media .fa-brands {
+    font-size: 2.5rem;
+  }
 }
